Revision history for {{$dist->name}}

{{$NEXT}}
  - Patch to fix header guard included but unreleased in upstream (gh#9)

0.06      2020-12-10 12:57:40 -0700
  - Patch to allow libnewrelic to build on clang 10 (gh#7)

0.05      2020-06-03 14:15:21 -0600
  - Add patch to override hostname (gh#6)
    (based on https://github.com/plicease/newrelic-c-sdk/tree/graham/perl-patches)

0.04      2020-05-19 15:19:03 -0600
  - Pin to libnewrelic 1.3.0 for patches (gh#5)
  - Add patch to add newrelic_notice_error_with_stacktrace
    (based on https://github.com/newrelic/c-sdk/pull/18) (gh#5)
  - Patch on macOS to allow build (Caveant: macOS is not
    supported by NewRelic) (gh#5)

0.03      2020-05-15 10:56:31 -0400
  - Removed libpcre workaround in test that would fail on
    older versions of FFI::Platypus (gh#4)
  - Use Alien::libpcre to get the PCRE library on systems
    that lack it (gh#1, gh#4)

0.02      2020-05-14 15:00:28 -0400
  - First CPAN release

0.01      2019-06-14 20:03:42 -0400
  - initial version